tests/types/errors/shift_float_rhs.mog
#!strict
var value i32 = 1
var amount f64 = 2.0
print(value << amount)
